--- a/index.html
+++ b/index.html
@@ -38,16 +38,16 @@
       
           <div class="slides">
             <div class="slide" id="s1">
-              <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\12A2-28-Portfolio-Dinh-Hoang-Thien\12A2-28-Porfolio-Dinh-Hoang-Thien.html"><img src="Thien.jpg" alt="Slide 1"></a>
+              <a href="12A2-28-Porfolio-Dinh-Hoang-Thien.html"><img src="Thien.jpg" alt="Slide 1"></a>
             </div>
             <div class="slide" id="s2">
-              <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\12A2-17-Portfolio-Than-Trong-Khoi\12A2-17-Portfolio-Than-Trong-Khoi.html"><img src="Koi.jpg" alt="Slide 2"></a>
+              <a href="12A2-17-Portfolio-Than-Trong-Khoi.html"><img src="3-800x450-5.jpg" alt="Slide 2"></a>
             </div>
             <div class="slide" id="s3">
-              <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\12A2-14-Portfolio-Lam-Duy-Khang\12A2-14-Portfolio-Lam-Duy-Khang.html"><img src="Khang3.jpg" alt="Slide 3"></a>
+              <a href="12A2-14-Portfolio-Lam-Duy-Khang.html"><img src="Khang3.jpg" alt="Slide 3"></a>
             </div>
             <div class="slide" id="s4">
-              <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\12A2-10-Portfolio-Wu-Ming-Feng\12A2-10-Portfolio-Wu-Ming-Feng.html"><img src="Feng2.jpg" alt="Slide 4"></a>
+              <a href="12A2-10-Portfolio-Wu-Ming-Feng.html"><img src="Feng2.jpg" alt="Slide 4"></a>
             </div>
           </div>
       
