12A2-17-Portfolio-Than-Trong-Khoi.html

--- a/12A2-17-Portfolio-Than-Trong-Khoi.html
+++ b/12A2-17-Portfolio-Than-Trong-Khoi.html
@@ -29,7 +29,7 @@
 
 <body>
     <header> 
-        <a href ="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\index.html" style="text-decoration: none;" class ="logo"> My Portfolio </a>
+        <a href ="index.html" style="text-decoration: none;" class ="logo"> My Portfolio </a>
         <nav>
             <a href="#" style="text-decoration: none;" class = "active"> Home</a>
             <a href="aboutme.html" style="text-decoration: none;"> About Me</a>
