--- a/aboutme.html
+++ b/aboutme.html
@@ -17,7 +17,7 @@
 
     <body>
         <header> 
-            <a href ="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\index.html" style="text-decoration: none;" class ="logo"> My Portfolio </a>
+            <a href ="index.html" style="text-decoration: none;" class ="logo"> My Portfolio </a>
             <nav>
                 <a href="12A2-17-Portfolio-Than-Trong-Khoi.html" style="text-decoration: none;"> Home</a>
                 <a href="#" class = "active" style="text-decoration: none;"> About Me</a>
