12A2-28-Porfolio-Dinh-Hoang-Thien.html

--- a/12A2-28-Porfolio-Dinh-Hoang-Thien.html
+++ b/12A2-28-Porfolio-Dinh-Hoang-Thien.html
@@ -13,7 +13,7 @@
         <div class="nav-container">
             <div class="logo" data-aos="zoom-in" data-aos-duration="1000">
                 <!-- <span><a href ="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\index.html">My Portfolio</a></span> -->
-                <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\index.html">My Portfolio</a>
+                <a href="index.html">My Portfolio</a>
             </div>
             <div class="links">
                 <div class="link" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="100"><a href="#">Home</a></div>
