12A2-14-Portfolio-Lam-Duy-Khang.html

--- a/12A2-14-Portfolio-Lam-Duy-Khang.html
+++ b/12A2-14-Portfolio-Lam-Duy-Khang.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-    <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\index.html" class="logo"> My portfolio</a>
+    <a href="index.html" class="logo"> My portfolio</a>
     <nav>
         <a href="#intro">Giới thiệu</a>
         <a href="#hobbies">Sở thích</a>
