12A2-10-Portfolio-Wu-Ming-Feng.html

--- a/12A2-10-Portfolio-Wu-Ming-Feng.html
+++ b/12A2-10-Portfolio-Wu-Ming-Feng.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\index.html" class="logo">My Portfolio</a>
+        <a href="index.html" class="logo">My Portfolio</a>
 
         <nav>
             <a href="#home" class="active">Home</a>
