12A2-28-Porfolio-Dinh-Hoang-Thien.html

--- a/12A2-28-Porfolio-Dinh-Hoang-Thien.html
+++ b/12A2-28-Porfolio-Dinh-Hoang-Thien.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css">
     <title>DINH HOANG THIEN Portfolio</title>
-    <link rel="stylesheet" href="D:\12A2-BT7.2-Sanh-Cho-Fi-Fai\12A2-28-Portfolio-Dinh-Hoang-Thien\12A2-28-Dinh-Hoang-Thien.css">
+    <link rel="stylesheet" href="12A2-28-Dinh-Hoang-Thien.css">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 <body>
